--- a/style.css
+++ b/style.css
@@ -69,12 +69,14 @@ header {
   text-align: center;
   gap: 20px;
   margin: 50px 40px 32px 40px;
+  
 }
 .flower-img-container {
   width: 464px;
   height: 538px;
   border-radius: 300px 300px 0px 0px;
   background: rgba(167, 33, 98, 0.15);
+  
 }
 .flower-align {
 }
@@ -97,10 +99,12 @@ header {
   border-radius: 8px;
   background: rgba(39, 39, 39, 0.05);
   margin: 200px 240px 130px 240px;
+  box-shadow: 4px 4px 8px rgb(176, 128, 128);
 }
 .service {
   text-align: center;
 }
+
 /* --------hot deals section style------ */
 span {
   color: #e55473;
